// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderRightWidth renders 0 1`] = `
Array [
  .c0 {
  border-right-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightWidth renders function 1`] = `
Array [
  .c0 {
  border-right-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  border-right-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightWidth renders negative number 1`] = `
Array [
  .c0 {
  border-right-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightWidth renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-right-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-width: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-right-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-right-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightWidth renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-right-width: July;
}

@media May {
  .c0 {
    border-right-width: August;
  }
}

@media April {
  .c0 {
    border-right-width: September;
  }
}

@media January {
  .c0 {
    border-right-width: November;
  }
}

@media April {
  .c0 {
    border-right-width: August;
  }
}

@media June {
  .c0 {
    border-right-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: July;
}

@media May {
  .c0 {
    border-right-width: August;
  }
}

@media April {
  .c0 {
    border-right-width: September;
  }
}

@media January {
  .c0 {
    border-right-width: November;
  }
}

@media April {
  .c0 {
    border-right-width: August;
  }
}

@media June {
  .c0 {
    border-right-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-right-width: November;
  }
}

@media April {
  .c0 {
    border-right-width: January;
  }
}

@media January {
  .c0 {
    border-right-width: December;
  }
}

@media April {
  .c0 {
    border-right-width: April;
  }
}

@media June {
  .c0 {
    border-right-width: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-right-width: November;
  }
}

@media April {
  .c0 {
    border-right-width: January;
  }
}

@media January {
  .c0 {
    border-right-width: December;
  }
}

@media April {
  .c0 {
    border-right-width: April;
  }
}

@media June {
  .c0 {
    border-right-width: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightWidth renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-right-width: July;
  }
}

@media April {
  .c0 {
    border-right-width: August;
  }
}

@media January {
  .c0 {
    border-right-width: September;
  }
}

@media April {
  .c0 {
    border-right-width: November;
  }
}

@media June {
  .c0 {
    border-right-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-right-width: July;
  }
}

@media April {
  .c0 {
    border-right-width: August;
  }
}

@media January {
  .c0 {
    border-right-width: September;
  }
}

@media April {
  .c0 {
    border-right-width: November;
  }
}

@media June {
  .c0 {
    border-right-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-right-width: January;
  }
}

@media April {
  .c0 {
    border-right-width: December;
  }
}

@media January {
  .c0 {
    border-right-width: April;
  }
}

@media April {
  .c0 {
    border-right-width: May;
  }
}

@media June {
  .c0 {
    border-right-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-right-width: January;
  }
}

@media April {
  .c0 {
    border-right-width: December;
  }
}

@media January {
  .c0 {
    border-right-width: April;
  }
}

@media April {
  .c0 {
    border-right-width: May;
  }
}

@media June {
  .c0 {
    border-right-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightWidth renders postitive number 1`] = `
Array [
  .c0 {
  border-right-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightWidth renders string 1`] = `
Array [
  .c0 {
  border-right-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightWidth renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderRightWidth renders valid theme path 1`] = `
Array [
  .c0 {
  border-right-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
